@@ -7,35 +7,35 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.50 (gritter) 4/17/06";
+	"@(#)/usr/ucb/otfdump.sl	6.52 (gritter) 4/17/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.50 (gritter) 4/17/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.50 (gritter) 4/17/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.52 (gritter) 4/17/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.52 (gritter) 4/17/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.50 (gritter) 4/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.52 (gritter) 4/17/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.50 (gritter) 4/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.52 (gritter) 4/17/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.50";
+const char revision[] = "6.52";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
-ext.h: * Sccsid @(#)ext.h	1.39 (gritter) 4/3/06
+ext.h: * Sccsid @(#)ext.h	1.40 (gritter) 4/17/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.70 (gritter) 4/15/06
+n1.c: * Sccsid @(#)n1.c	1.71 (gritter) 4/17/06
 n2.c: * Sccsid @(#)n2.c	1.17 (gritter) 4/3/06
-n3.c: * Sccsid @(#)n3.c	1.80 (gritter) 4/17/06
+n3.c: * Sccsid @(#)n3.c	1.82 (gritter) 4/17/06
 n4.c: * Sccsid @(#)n4.c	1.25 (gritter) 3/21/06
-n5.c: * Sccsid @(#)n5.c	1.39 (gritter) 3/13/06
+n5.c: * Sccsid @(#)n5.c	1.40 (gritter) 4/17/06
 n7.c: * Sccsid @(#)n7.c	1.45 (gritter) 4/2/06
 n8.c: * Sccsid @(#)n8.c	1.22 (gritter) 4/3/06
 n9.c: * Sccsid @(#)n9.c	1.41 (gritter) 4/14/06
 ni.c: * Sccsid @(#)ni.c	1.20 (gritter) 3/3/06
-nii.c: * Sccsid @(#)nii.c	1.26 (gritter) 4/3/06
+nii.c: * Sccsid @(#)nii.c	1.27 (gritter) 4/17/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.73 (gritter) 4/14/06
+tdef.h: * Sccsid @(#)tdef.h	1.74 (gritter) 4/17/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.23 (gritter) 3/22/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.33 (gritter) 4/14/06
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.34 (gritter) 4/14/06
